# Circt4Coral

./: .gitignore  QUICKSTART.md  circt4coral-ci-test.py  circt4coral-emit-format.py  circt4coral-validate.py
.github/releases/: v0.1.0.md
.github/workflows/: circt4coral-e2e.yml
bench/: 0006-coralnpu-csr-writable.patch  CSR-DEMO.md  bench-compare.py  bench-scalar-16.mlir  bench-scalar-fair.mlir  bench-scalar.mlir  bench-vector-fair.mlir  bench-vector.mlir  csr-demo.mlir  csr-demo.py
blog/: MLIR-Discourse-Blog-2026-06-14.md  MLIRConf-2026-Abstract.md
docker/: Dockerfile.circt4coral  Makefile  README.md
docker/examples/: hello.mlir  tosa-add.mlir  vector-add.mlir
include/circt/: InitAllDialects.h  InitAllPasses.h
include/circt/Dialect/: CMakeLists.txt
include/circt/Dialect/CoralNPU/: CMakeLists.txt  CoralNPU.td  CoralNPUAttributes.td  CoralNPUDialect.h  CoralNPUEncodings.h  CoralNPUOps.h  CoralNPUOps.td  CoralNPUPasses.h  CoralNPUPasses.td  (+2 more)
include/circt/Support/: LLVM.h
lib/Dialect/: CMakeLists.txt
lib/Dialect/CoralNPU/: CMakeLists.txt  CoralNPUDialect.cpp  CoralNPUOps.cpp  CoralNPUTypes.cpp
lib/Dialect/CoralNPU/Transforms/: CMakeLists.txt  CheckCoralNPUHW.cpp  CoralNPUEmitAssembly.cpp  CoralNPUFormalVerify.cpp  CoralNPULegalize.cpp  CoralNPURegAlloc.cpp  CoralNPUStripmine.cpp  ExportCoralNPU.cpp  LoopToCoralNPU.cpp  TosaToCoralNPU.cpp
test/Dialect/CoralNPU/: e2e-conv2d.mlir  e2e-npu-compute.mlir  e2e-tosa-pipeline.mlir  hw-check.mlir  ops.mlir  real-rv-emit.mlir  stripmine.mlir  tosa-to-coralnpu.mlir
tools/circt-opt/: circt-opt.cpp
